--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 <html lang="ms">
 <head>
 
+<style>
+#appToast{position:fixed;right:16px;bottom:16px;z-index:9999;display:none;min-width:260px;max-width:360px}
+.appToast-card{background:#111827;color:#fff;border-radius:10px;box-shadow:0 10px 24px rgba(0,0,0,.2);padding:12px 14px;font-size:14px;display:flex;gap:10px;align-items:flex-start}
+.appToast-card.success{background:#065f46}
+.appToast-card.warning{background:#92400e}
+.appToast-card.error{background:#7f1d1d}
+.appToast-card .title{font-weight:600;margin:0 0 2px 0}
+.appToast-card .msg{margin:0;opacity:.95}
+.sejarah-loading{display:flex;align-items:center;gap:.5rem;font-size:.9rem;color:#6b7280}
+.sejarah-spinner{width:14px;height:14px;border:2px solid #cbd5e1;border-top-color:#3b82f6;border-radius:50%;animation:spin .8s linear infinite}
+@keyframes spin{to{transform:rotate(360deg)}}
+</style>
+<div id="appToast" aria-live="polite"></div>
+
+
   <script>
   (function(){
     if (window.jsonSafe) return;
@@ -1115,7 +1130,8 @@
           </div>
         </div>
         <div class="card-body p-0">
-          <div id="programList" class="list-group small program-list" role="listbox" aria-label="Senarai program">
+          <div id="programListLoader" class="sejarah-loading"><span class="sejarah-spinner"></span><span>Memuat data…</span></div>
+      <div id="programList" class="list-group small program-list" role="listbox" aria-label="Senarai program">
             <div class="placeholder-glow p-3">
               <div class="placeholder col-12 mb-2"></div>
               <div class="placeholder col-10 mb-2"></div>
@@ -6750,6 +6766,156 @@ function __toVoucherPayload(payload){
       });
     }
   });
+})();
+</script>
+
+
+<script>
+(function(){
+  function showToast(message, type){
+    try{
+      var host = document.getElementById('appToast');
+      if (!host) return; // fallthrough silently
+      host.innerHTML = '<div class="appToast-card '+(type||'')+'"><div><div class="title">Notifikasi</div><div class="msg">'+escapeHtml(String(message||''))+'</div></div></div>';
+      host.style.display = 'block';
+      clearTimeout(host.__t);
+      host.__t = setTimeout(function(){ host.style.display='none'; }, 3500);
+    }catch(e){}
+  }
+  function escapeHtml(s){ return String(s).replace(/[&<>"]/g, m=>({ '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;' }[m])); }
+
+  function byId(id){ return document.getElementById(id); }
+  function q(sel){ return document.querySelector(sel); }
+  function isSejarah(){ return (location.hash||'').indexOf('#sejarah')===0 || !!byId('programList'); }
+  function programListPane(){ return byId('programList') || q('#programListContainer') || q('[data-role="program-list"]') || q('#sejarahCard .card-body'); }
+  function detailPane(){ return byId('programDetail') || q('#programDetailContainer') || q('[data-role="program-detail"]') || q('#programTable'); }
+
+  function mountLoader(where){
+    try{
+      if (!where || where.__loaderMounted) return;
+      var wrap = document.createElement('div');
+      wrap.className = 'sejarah-loading';
+      wrap.innerHTML = '<span class="sejarah-spinner"></span><span>Memuat data…</span>';
+      where.__loaderMounted = wrap;
+      if (where.children.length===0) where.textContent='';
+      where.appendChild(wrap);
+    }catch(e){}
+  }
+  function unmountLoader(where){
+    try{ if (where && where.__loaderMounted){ where.__loaderMounted.remove(); where.__loaderMounted=null; } }catch(e){}
+  }
+
+  async function loadSejarahOnce(){
+    const listEl = programListPane();
+    const detEl  = detailPane();
+    mountLoader(listEl); mountLoader(detEl);
+    try{
+      if (typeof window.loadPrograms === 'function'){ await Promise.resolve(window.loadPrograms()); }
+      if (typeof window.renderProgramList === 'function'){ window.renderProgramList(); }
+      const list = byId('programList');
+      if (list){
+        const active = list.querySelector('.list-group-item.active');
+        const first  = list.querySelector('.list-group-item');
+        if (!active && first && typeof first.click === 'function'){ first.click(); }
+      }
+    } finally {
+      unmountLoader(programListPane());
+      unmountLoader(detailPane());
+    }
+  }
+
+  function triggerSejarahLoad(){
+    if (!isSejarah()) return;
+    if (window.__sejarahLoadedAfterAuth) return;
+    window.__sejarahLoadedAfterAuth = true;
+    loadSejarahOnce().catch(function(err){ console.warn('Sejarah load error', err); });
+  }
+
+  // Hook Google Sign-In callback to fire 'auth-ready' then load Sejarah
+  (function wrapAuth(){
+    function install(){
+      if (window.__authWrapInstalled) return;
+      if (typeof window.handleCredentialResponse === 'function'){
+        var orig = window.handleCredentialResponse;
+        window.handleCredentialResponse = async function(){
+          var r; try{ r = orig.apply(this, arguments); }catch(e){ r=undefined; }
+          try{ await Promise.resolve(r); }catch(e){}
+          document.dispatchEvent(new CustomEvent('auth-ready'));
+          return r;
+        };
+        window.__authWrapInstalled = true;
+      }
+    }
+    install();
+    var checks = 0;
+    var iv = setInterval(function(){
+      if (window.__authWrapInstalled){ clearInterval(iv); return; }
+      install(); checks++; if (checks > 20) clearInterval(iv);
+    }, 250);
+  })();
+
+  // Token watcher fallback
+  (function watchToken(){
+    var fired = false, tries = 0;
+    var iv = setInterval(function(){
+      tries++;
+      var tok = sessionStorage.getItem('id_token') || sessionStorage.getItem('ID_TOKEN') ||
+                localStorage.getItem('id_token')  || localStorage.getItem('ID_TOKEN');
+      if (tok && !fired){
+        fired = true;
+        document.dispatchEvent(new CustomEvent('auth-ready'));
+      }
+      if (fired || tries > 30) clearInterval(iv);
+    }, 300);
+  })();
+
+  document.addEventListener('auth-ready', triggerSejarahLoad);
+
+  // Manual refresh
+  document.addEventListener('DOMContentLoaded', function(){
+    var btn = byId('refreshSejarahBtn');
+    if (btn){ btn.addEventListener('click', function(){ window.__sejarahLoadedAfterAuth=false; triggerSejarahLoad(); }); }
+  });
+
+  // Fetch wrapper for saveNadiActivity notifications
+  (function wrapFetchForSave(){
+    if (window.__fetchWrappedSave) return;
+    window.__fetchWrappedSave = true;
+    var _origFetch = window.fetch.bind(window);
+    window.fetch = async function(input, init){
+      var reqBodyText = '';
+      try{
+        var method = (init && (init.method||'GET')).toUpperCase();
+        if (method === 'POST' && init && init.body){
+          if (typeof init.body === 'string'){ reqBodyText = init.body; }
+          else if (init.body instanceof FormData){
+            var parts = [];
+            init.body.forEach(function(v,k){ parts.push(k+'='+v); });
+            reqBodyText = parts.join('&');
+          } else {
+            try{ reqBodyText = JSON.stringify(init.body); }catch(e){}
+          }
+        }
+      }catch(e){}
+
+      const res = await _origFetch(input, init);
+      try{
+        if (/saveNadiActivity/.test(reqBodyText)){
+          const data = await jsonSafe(res.clone());
+          if (data && data.status === 'success'){
+            if (data.updatedExisting && Number(data.updatedExisting) > 0){
+              showToast('Maklumat pesakit ini telah direkodkan sebelum ini pada tarikh yang sama. Rekod sedia ada telah dikemas kini tanpa menambah baris baharu.', 'warning');
+            } else {
+              showToast('Aktiviti disimpan.', 'success');
+            }
+          } else if (data && data.status === 'error'){
+            showToast('Ralat menyimpan: ' + (data.message||'Tidak diketahui'), 'error');
+          }
+        }
+      }catch(e){}
+      return res;
+    };
+  })();
 })();
 </script>
 
